@@ -1,2 +1,2 @@
-conductive
+conductiveInternal
 structural
