@@ -1,4 +1,4 @@
 blocking
 visionBlocking
-conductive
+conductiveInternal
 structural
