@@ -1,3 +1,3 @@
-conductive
+conductiveInternal
 stuck
 notDamaged
